<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".RegisterActivity"
    android:padding="0sp">

    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bgcard"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCoffeine"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/msg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="0sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="0sp"
            android:fontFamily="@font/average_sans"
            android:text="@string/let_s_get_started"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/etName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/average_sans"
            android:text="@string/the_smell_of_coffee_mug"
            android:textAlignment="center"
            android:textColor="#AFAFAF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/etEmail"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="32sp"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/average_sans"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="18dp"
            android:paddingRight="18dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/etPassword"
            android:layout_marginBottom="32sp"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/average_sans"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="18dp"
            android:paddingRight="18dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/btnUpdate"
            android:layout_marginTop="0sp"
            android:layout_marginBottom="86sp"
            android:background="@drawable/bg_editext"
            android:fontFamily="@font/average_sans"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="18dp"
            android:paddingRight="18dp" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="200sp"
            android:layout_height="65sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="80sp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/average_sans"
            android:onClick="onClickRegister"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:cornerRadius="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_below="@+id/msg2"
            android:layout_alignStart="@+id/msg2"
            android:layout_alignEnd="@+id/msg2"
            android:layout_marginStart="72sp"
            android:layout_marginTop="0sp"
            android:layout_marginEnd="72sp"
            android:background="@drawable/bg_editext" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvCoffeine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/average_sans"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="39dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>